--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,10 +1,10 @@
 [defaults]
-inventory             = /home/ali/ansible/inventory
+inventory             = /home/ali/LAMP-Stack-with-Ansible/inventory
 forks                 = 5
 remote_user           = ali
 ask_pass              = False
-roles_path            = /home/ali/ansible/roles:/usr/share/ansible/roles
-collections_paths     = ~/.ansible/collections:/home/ali/ansible/collections:/usr/share/ansible/collections
+roles_path            = /home/ali/LAMP-Stack-with-Ansible/roles:/usr/share/ansible/roles
+collections_paths     = ~/.ansible/collections:/home/ali/LAMP-Stack-with-Ansible/collections:/usr/share/ansible/collections
 host_key_checking     = False
 deprecation_warnings  = False
 
