--- a/ansible.cfg
+++ b/ansible.cfg
@@ -9,7 +9,7 @@ host_key_checking     = False
 deprecation_warnings  = False
 
 [privilege_escalation]
-become=True
+become=False
 become_method=sudo
 become_user=root
 become_ask_pass=False
